--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,30 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background-color: #1E5C3A;
+  border-radius: 1rem;
+  border: 3px solid #000
+}
+
+#players-select {
+  margin-left: 1rem;
+  padding: 0.25rem;
+  border-radius: 0.25rem;
+  border: 1px solid #000;
+}
+
+.player-select {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .players {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
   gap: 2rem;
+  justify-content: center;
 }
 
 .player {
@@ -18,11 +37,29 @@
 
 .player-cards {
   display: flex;
+  justify-content: center;
   gap: 2rem
 }
 
 .card {
-  border: 1px solid white;
+  border: 2px solid #000;
   border-radius: 0.5rem;
   padding: 1rem;
+  background-color: #fff;
+  color: #000;
+}
+
+.player-actions {
+  display: flex;
+  gap: 1rem;
+  margin-top: 1rem;
+  justify-content: center;
+}
+
+.player.active {
+  border: 2px solid #4CAF50;
+  padding: 1rem;
+  border-radius: 8px;
+  background-color: #0b311c;
+  box-shadow: 10px 5px 5px #000;
 }
